objects/Integration_Settings_General__mdt.object
<CustomObject>
    <description>RN - CloudSmiths 
General settings for outbound REST integrations</description>
    <fields>
        <fullName>ClientID__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentType__c</fullName>
        <label>Content Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>End Point</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RefreshToken__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Settings General</label>
    <pluralLabel>Integration Settings General</pluralLabel>
</CustomObject>